# rlike

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ROADMAP.md  build.sh  clean.sh
include/: actor.h  ai.h  error.h  event.h  game.h  gui.h  inventory.h  item.h  log.h  map.h  pathfinding.h  random.h  rogue.h  serialization.h  symbols.h  vec.h  vec2.h
res/bosses/: boss.json  goblin_chieftain.json
res/enemies/: cobold.json  goblin.json  rat.json  skeleton.json
res/items/armor/: breastplate.json  chain_mail.json  gambeson.json  leather_armor.json  plate_armor.json  rags.json
res/items/weapons/: club.json  dagger.json  hammer.json  katana.json  mace.json  shortsword.json  spear.json  stiletto.json  sword.json
res/saves/: enemies.json  map.json  player.json
src/: CMakeLists.txt  actor.c  ai.c  error.c  event.c  game.c  gui.c  inventory.c  item.c  log.c  main.c  map.c  pathfinding.c  random.c  rogue.c  serialization.c  vec.c  vec2.c
